--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Nathan Yang</title>
     </head>
-    <body></body>
+    <body>
+        <h1>ok</h1>
+    </body>
     <script src="script.js"></script>
 </html>
