--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Nathan Yang</title>
+        <link href="style.css" rel="stylesheet">
+        <!-- <link rel="icon" type="image/x-icon" href=""> -->
     </head>
     <body>
         <h1>ok</h1>
