--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
     <head>
         <title>Nathan Yang</title>
         <link href="style.css" rel="stylesheet">
-        <!-- <link rel="icon" type="image/x-icon" href=""> -->
+        <link rel="icon" type="image/x-icon" href="Images/icon.png">
+
+        <!-- Font code -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+SA:wght@100..400&display=swap" rel="stylesheet">
+
     </head>
     <body>
-        <h1>ok</h1>
+        <h1 id="name">Nathan Yang</h1>
+
+        <img id="profilePicture" src="Images/placeholder profile.png"/>
+
+        <div id="rightSide">
+            <h3 id="aboutMeTitle">About Me</h3>
+            <p id="aboutMe">Hello World</p>
+            <div id="icons">
+                
+            </div>
+        </div>
+
     </body>
     <script src="script.js"></script>
 </html> 
